--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "eh-tudo-nosso",
-  "version": "0.1.4",
+  "version": "0.1.6",
   "dependencies": {
+    "moti": "0.16",
     "react": "^17.0.2",
     "react-native": "^0.67.3",
+    "react-native-reanimated": "~2.2.0",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
