--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "eh-tudo-nosso",
-  "version": "0.1.6",
+  "version": "0.1.7",
   "dependencies": {
+    "expo": "^44.0.6",
     "moti": "0.16",
     "react": "^17.0.2",
     "react-native": "^0.67.3",
@@ -10,7 +11,6 @@
   },
   "devDependencies": {
     "@types/styled-components": "^5.1.24",
-    "@types/styled-components-react-native": "^5.1.3",
-    "expo": "^44.0.6"
+    "@types/styled-components-react-native": "^5.1.3"
   }
 }
