--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
   "name": "eh-tudo-nosso",
-  "version": "0.1.11",
+  "version": "0.1.17",
+  "main": "build/index.js",
+  "scripts": {
+    "build": "webpack",
+    "npm": "yarn build && yarn publish"
+  },
   "dependencies": {
     "expo": "^44.0.6",
     "moti": "0.16",
@@ -10,7 +15,16 @@
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
+    "@babel/core": "^7.17.5",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-react": "^7.16.7",
     "@types/styled-components": "^5.1.24",
-    "@types/styled-components-react-native": "^5.1.3"
+    "@types/styled-components-react-native": "^5.1.3",
+    "babel-loader": "^8.2.3",
+    "webpack": "^5.70.0",
+    "webpack-cli": "^4.9.2"
+  },
+  "engines": {
+    "node": ">=12.0.0"
   }
 }
