🛠 change to typescript

--- a/package.json
+++ b/package.json
@@ -1,10 +1,35 @@
 {
   "name": "eh-tudo-nosso",
-  "version": "0.1.17",
-  "main": "build/index.js",
+  "private": false,
+  "version": "0.2.0",
+  "license": "MIT",
+  "description": "Componentes básicos feitos para React e React Native",
+  "keywords": [
+    "react",
+    "react-native",
+    "ios",
+    "android"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/polijrorg/eh-tudo-nosso.git"
+  },
+  "main": "lib/commonjs/index.js",
+  "react-native": "src/index.ts",
+  "source": "src/index.ts",
+  "module": "lib/module/index.js",
+  "types": "lib/typescript/src/index.d.ts",
+  "files": [
+    "src",
+    "lib"
+  ],
+  "sideEffects": false,
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
-    "build": "webpack",
-    "npm": "yarn build && yarn publish"
+    "prepare": "bob build",
+    "clean": "del lib"
   },
   "dependencies": {
     "expo": "^44.0.6",
@@ -12,6 +37,7 @@
     "react": "^17.0.2",
     "react-native": "^0.67.3",
     "react-native-reanimated": "~2.2.0",
+    "react-native-svg": "12.1.1",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
@@ -21,10 +47,23 @@
     "@types/styled-components": "^5.1.24",
     "@types/styled-components-react-native": "^5.1.3",
     "babel-loader": "^8.2.3",
+    "react-native-builder-bob": "^0.18.2",
+    "typescript": "^4.6.2",
     "webpack": "^5.70.0",
     "webpack-cli": "^4.9.2"
   },
-  "engines": {
-    "node": ">=12.0.0"
+  "react-native-builder-bob": {
+    "source": "src",
+    "output": "lib",
+    "targets": [
+      "commonjs",
+      "module",
+      [
+        "typescript",
+        {
+          "project": "tsconfig.build.json"
+        }
+      ]
+    ]
   }
 }
