--- a/package.json
+++ b/package.json
@@ -1,69 +1,51 @@
 {
+  "description": "A biblioteca de componentes React e React Native da Poli Júnior 👨🏻‍💻",
   "name": "eh-tudo-nosso",
-  "private": false,
-  "version": "0.2.0",
-  "license": "MIT",
-  "description": "Componentes básicos feitos para React e React Native",
-  "keywords": [
-    "react",
-    "react-native",
-    "ios",
-    "android"
+  "private": true,
+  "workspaces": [
+    "packages/*"
   ],
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/"
+  },
+  "license": "MIT",
   "repository": {
     "type": "git",
     "url": "git://github.com/polijrorg/eh-tudo-nosso.git"
   },
-  "main": "lib/commonjs/index.js",
-  "react-native": "src/index.ts",
-  "source": "src/index.ts",
-  "module": "lib/module/index.js",
-  "types": "lib/typescript/src/index.d.ts",
-  "files": [
-    "src",
-    "lib"
-  ],
-  "sideEffects": false,
-  "publishConfig": {
-    "access": "public"
-  },
   "scripts": {
-    "prepare": "bob build",
-    "clean": "del lib"
+    "typescript": "tsc --noEmit --composite false",
+    "build": "lerna run prepare",
+    "prerelease": "lerna run clean",
+    "release": "auto shipit",
+    "prepare": "lerna run prepare"
   },
-  "dependencies": {
-    "expo": "^44.0.6",
-    "moti": "0.16",
-    "react": "^17.0.2",
-    "react-native": "^0.67.3",
-    "react-native-reanimated": "~2.2.0",
-    "react-native-svg": "12.1.1",
-    "styled-components": "^5.3.3"
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
+      "pre-commit": "yarn prepare"
+    }
   },
+  "dependencies": {},
   "devDependencies": {
-    "@babel/core": "^7.17.5",
-    "@babel/preset-env": "^7.16.11",
-    "@babel/preset-react": "^7.16.7",
-    "@types/styled-components": "^5.1.24",
-    "@types/styled-components-react-native": "^5.1.3",
-    "babel-loader": "^8.2.3",
-    "react-native-builder-bob": "^0.18.2",
-    "typescript": "^4.6.2",
-    "webpack": "^5.70.0",
-    "webpack-cli": "^4.9.2"
+    "auto": "^10.34.1",
+    "husky": "^7.0.4",
+    "lerna": "^4.0.0",
+    "typescript": "^4.6.2"
   },
-  "react-native-builder-bob": {
-    "source": "src",
-    "output": "lib",
-    "targets": [
-      "commonjs",
-      "module",
-      [
-        "typescript",
-        {
-          "project": "tsconfig.build.json"
-        }
-      ]
+  "author": "Henrique Falconer <henrique.falconer@polijunior.com.br>",
+  "auto": {
+    "plugins": ["npm"],
+    "onlyPublishWithReleaseLabel": true,
+    "labels": [
+      {
+        "name": "minor",
+        "changelogTitle": "🚀 Enhancement",
+        "description": "Increment the minor version when merged",
+        "releaseType": "minor",
+        "color": "8000c5",
+        "overwrite": true
+      }
     ]
   }
 }
