--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
   "scripts": {
     "typescript": "tsc --noEmit --composite false",
     "build": "lerna run prepare",
-    "prerelease": "lerna run clean",
     "release": "auto shipit",
     "prepare": "lerna run prepare"
   },
@@ -28,6 +27,9 @@
   },
   "dependencies": {},
   "devDependencies": {
+    "@auto-it/all-contributors": "^10.34.1",
+    "@auto-it/conventional-commits": "^10.34.1",
+    "@auto-it/first-time-contributor": "^10.34.1",
     "auto": "^10.34.1",
     "husky": "^7.0.4",
     "lerna": "^4.0.0",
@@ -35,17 +37,14 @@
   },
   "author": "Henrique Falconer <henrique.falconer@polijunior.com.br>",
   "auto": {
-    "plugins": ["npm"],
     "onlyPublishWithReleaseLabel": true,
-    "labels": [
-      {
-        "name": "minor",
-        "changelogTitle": "🚀 Enhancement",
-        "description": "Increment the minor version when merged",
-        "releaseType": "minor",
-        "color": "8000c5",
-        "overwrite": true
-      }
+    "githubApi": "https://github.com/polijrorg/eh-tudo-nosso",
+    "plugins": [
+      "npm",
+      "all-contributors",
+      "conventional-commits",
+      "first-time-contributor",
+      "released"
     ]
   }
 }
