:wrench: fix: general configs

--- a/packages/native/tsconfig.json
+++ b/packages/native/tsconfig.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "outDir": "./lib/typescript",
     "paths": {
-      "@eh-tudo-nosso/*": ["../*/src"]
+      "@ntec/*": ["../*/src"]
     }
   }
 }
