--- a/packages/native/package.json
+++ b/packages/native/package.json
@@ -28,9 +28,9 @@
   "scripts": {
     "prepare": "bob build"
   },
-  "peerDependencies": {
+  "dependencies": {
+    "@motify/components": "^0.17.1",
     "expo": "^44.0.6",
-    "moti": "0.16",
     "react": "^17.0.2",
     "react-native": "^0.67.3",
     "react-native-reanimated": "~2.2.0",
