--- a/packages/native/package.json
+++ b/packages/native/package.json
@@ -26,7 +26,7 @@
   ],
   "sideEffects": false,
   "scripts": {
-    "prepare": "bob build"
+    "prepare": "yarn && bob build"
   },
   "peerDependencies": {
     "react": "^17.0.2",
@@ -59,5 +59,5 @@
       ]
     ]
   },
-  "gitHead": "b7d04e2e775071a5ffcadb6a4ad5cce24d7342f5"
+  "gitHead": "95ad3fe5e9c844e85213ce79a256a3dd1d04ce62"
 }
