--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -26,7 +26,7 @@
   ],
   "sideEffects": false,
   "scripts": {
-    "prepare": "bob build"
+    "prepare": "yarn && bob build"
   },
   "devDependencies": {
     "react-native-builder-bob": "^0.18.2",
