--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "scripts": {
     "build": "lerna run prepare",
-    "release": "lerna publish"
+    "release": "yarn && lerna publish"
   },
   "husky": {
     "hooks": {
