--- a/packages/native/package.json
+++ b/packages/native/package.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "@motify/components": "^0.17.1",
     "expo": "^44.0.6",
+    "moti": "^0.17.1",
     "react-native-reanimated": "~2.2.0",
     "react-native-svg": "12.1.1",
     "react-native-svg-transformer": "^1.0.0",
